5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1635_2447.log
== TEST (2019-04-10 14:23:39) 
-- CODE:
p = int(input("preco"))
pag = int(input("pagamento"))

if (p > pag):
	m = "Falta X"
else:
	m = "Troco de y"
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:23:49) 
-- CODE:
p = int(input("preco"))
pag = int(input("pagamento"))

if (p > pag):
	m = "Falta X"
else:
	m = "Troco de y"
print(m)
-- EXECUTION TIME:
0.121206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    p = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:38:00) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", x)
else (round(y - x, 2))
	f = ("Falta", y)
print(f)
-- ERROR:
File "XXXX", line 6
    else (round(y - x, 2))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:14:36) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", x)
else (round(y - x, 2))
	f = ("Falta", y)
print(f)
-- ERROR:
File "XXXX", line 6
    else (round(y - x, 2))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:14:53) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", x)
else: 
	(round(y - x, 2))
	f = ("Falta", y)
print(f)
-- EXECUTION TIME:
0.288706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:14:55) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", x)
else: 
	(round(y - x, 2))
	f = ("Falta", y)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:15:08) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", x)
else: 
	(round(y - x, 2))
	f = ("Falta", y)
print(f)
-- EXECUTION TIME:
0.1489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:15:34) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", X)
else: 
	(round(y - x, 2))
	f = ("Falta", Y)
print(f)
-- EXECUTION TIME:
0.229915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:15:36) 
-- CODE:
x = int(input("preco"))
y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", X)
else: 
	(round(y - x, 2))
	f = ("Falta", Y)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:16:05) 
-- CODE:
X = int(input("preco"))
Y = int(input("pagamento"))

if (round(x - y, 2)):
	f = ("Falta", X)
else: 
	(round(y - x, 2))
	f = ("Falta", Y)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:16:44) 
-- CODE:
X = int(input("preco"))
Y = int(input("pagamento"))

if (round(X - Y, 2)):
	f = ("Falta", X)
else: 
	(round(Y - X, 2))
	f = ("Falta", Y)
print(f)
-- EXECUTION TIME:
0.193632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    X = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:16:46) 
-- CODE:
X = int(input("preco"))
Y = int(input("pagamento"))

if (round(X - Y, 2)):
	f = ("Falta", X)
else: 
	(round(Y - X, 2))
	f = ("Falta", Y)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 10:21:11) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
x= preco-pagamento
y= pagamento-preco
if(preco>pagamento):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.125549
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
